syntax = "proto3";

package com.apihug.demo.order.proto.api.admin.response;

import "extend/domain.proto";
import "swagger/annotations.proto";

option (hope.domain.kind) = BEAN;


message OrderAddedResponse {
  option (hope.swagger.schema) = {
    json_schema: {
      description: "Order placed already";
    };
  };

  int64 order_id = 1 [(hope.swagger.field) = {
    description: "id of this order";
    example: "111";
  }];

  string sku_id = 2 [(hope.swagger.field) = {
    description: "SKU of the product";
    example: "XSK12MADA"
    empty: FALSE;
    mock: {
      nature: NAME
    }
    max_length: {
      value: 32
    }
  }];

  int64 quantity = 3 [(hope.swagger.field) = {
    description: "quantity of this oder";
    example: "1";
    default: "1";
    maximum:{
      value:1
    }
    minimum:{
      value:122
    }
    mock:{
      number_rule:{
        min:{
          value: 1
        }
        max:{
          value: 122
        }
      }
    }
  }];
}

message OrderDeletedResponse {

  option (hope.swagger.schema) = {
    json_schema: {
      description: "order deleted response";
    };
  };

  int64 order_id = 1 [(hope.swagger.field) = {
    description: "id of this order";
    example: "1111";
  }];

  string reason = 2 [(hope.swagger.field) = {
    description: "deleted reason";
    example: "wrong";
  }];

}
