syntax = "proto3";

package com.apihug.demo.order.proto.infra.settings.admin;

import "extend/constant.proto";
import "swagger/annotations.proto";
import "extend/domain.proto";

option (hope.domain.kind) = ENUM;

enum  OrderStatusEnum {

    option (hope.swagger.enm) = {
        description: "Status of the order",
    };

    NORMAL = 0 [(hope.constant.field) = {code: 1,message: "normal status", message2: "order is ok"}];
    DELETED = 1 [(hope.constant.field) = {code: 2,message: "deleted status", message2: "order is gone"}];

}